--- a/pages/canvas-tutorial/canvas-tutorial.html
+++ b/pages/canvas-tutorial/canvas-tutorial.html
@@ -18,6 +18,10 @@
         <![endif]-->
         <p>Canvas 1</p>
         <canvas id="canvas1" width="800" height="400">Fallback content goes here: "Your browser doesn't support canvas. Get a newer one."</canvas>
+        <p>Canvas 2</p>
+        <canvas id="canvas2" width="800" height="400">Fallback content goes here: "Your browser doesn't support canvas. Get a newer one."</canvas>
+        <p>Canvas 3</p>
+        <canvas id="canvas3" width="800" height="400">Fallback content goes here: "Your browser doesn't support canvas. Get a newer one."</canvas>
         <script src="canvas-tutorial.js" async defer></script>
     </body>
 </html>
