Added drag, stroke, userinput tests

--- a/pages/dragtest/dragtest.html
+++ b/pages/dragtest/dragtest.html
@@ -10,29 +10,13 @@
         <title></title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="">
+        <link rel="stylesheet" href="dragtest.css">
     </head>
     <body>
         <!--[if lt IE 7]>
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
-        <ol>
-         <li>
-           <a href="/pages/canvas-tutorial/canvas-tutorial.html">canvas tutorial 1</a>
-         </li>
-         <li>
-           <a href="/pages/hilbert/hilbert.html">static hilbert curve</a>
-         </li>
-         <li>
-           <a href="/pages/stroketest/stroketest.html">stroking a shape</a>
-         </li>
-         <li>
-           <a href="/pages/userinputtest/userinputtest.html">user input (character movement)</a>
-         </li>
-         <li>
-           <a href="/pages/dragtest/dragtest.html">draggable objects</a>
-         </li> 
-        </ol>
-        <script src="" async defer></script>
+        <canvas id="canvas" width="650" height="650">Fallback content goes here: "Your browser doesn't support canvas. Get a newer one."</canvas>
+        <script src="dragtest.css" async defer></script>
     </body>
 </html>
