--- a/pages/dragtest/dragtest.html
+++ b/pages/dragtest/dragtest.html
@@ -16,7 +16,7 @@
         <!--[if lt IE 7]>
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
-        <canvas id="canvas" width="650" height="650">Fallback content goes here: "Your browser doesn't support canvas. Get a newer one."</canvas>
-        <script src="dragtest.css" async defer></script>
+        <canvas id="canvas">Fallback content goes here: "Your browser doesn't support canvas. Get a newer one."</canvas>
+        <script src="dragtest.js" async defer></script>
     </body>
 </html>
